# askic

./: .gitignore  AUDIT.md  CLAUDE.md  Cargo.toml  DESIGN.md  SECOND-PASS.md  flake.nix
ffi/: Cargo.toml
ffi/src/: file_system.rs  lib.rs  std_string.rs
flake-crates/: sema-core
source/: askic.main  codegen.aski  compiler.aski  deparse.aski  lower.aski  parse.aski  parse_dialect.aski  parse_expr.aski  parse_item.aski  raise.aski  register.aski  sema.aski  synth.aski  tokens.aski  world.aski
src/: builder.rs  codegen.rs  domain.rs  engine.rs  engine_tests.rs  error.rs  lib.rs  machine.rs  main.rs  parse.rs  parse_context.rs  parse_tests.rs  sema.rs  token_stream.rs  typed.rs  values.rs
src/aski_compiler/: mod.rs
