[package]
name = "askic"
version = "0.17.0"
edition = "2021"
authors = ["Li Goldragon <li@goldragon.criome.net>"]
description = "askic — aski frontend: dialect state machine → rkyv parse tree"

[[bin]]
name = "askic"
path = "src/main.rs"

[lib]
name = "askic"
path = "src/lib.rs"

[dependencies]
aski-core = { path = "flake-crates/aski-core" }
aski = { path = "flake-crates/aski" }
logos = "0.14"
rkyv = { version = "0.8", default-features = false, features = [
    "little_endian",
    "alloc",
] }
