[package]
name = "askic"
version = "0.18.0"
edition = "2021"
authors = ["Li Goldragon <li@goldragon.criome.net>"]
description = "askic — aski frontend: pure dsl-driven state machine over dsls.rkyv"

[lib]
name = "askic"
path = "src/lib.rs"

[dependencies]
synth-core = { path = "flake-crates/synth-core" }
aski-core = { path = "flake-crates/aski-core" }
logos = "0.14"
rkyv = { version = "0.8", default-features = false, features = [
    "little_endian",
    "alloc",
] }
